# regular

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Taskfile.yml  appdb.go  appdb_test.go  basis.go  completedjob.go  debug.go  env.go  go.mod  go.sum  jobconfig.go  jobconfig_test.go  joberror.go  jobqueue.go  jobrunner.go  jobrunner_test.go  jobrunnerdb.go  jobscheduler.go  jobscheduler_test.go  jobstore.go  listcmd.go  logcmd.go  logfile.go  main.go  main_test.go  mkdir.go  notify.go  notify_test.go  protocol.go  protocol_test.go  pyproject.toml  run.go  runcmd.go  socket.go  socket_integration_test.go  socket_test.go  (+6 more)
.github/workflows/: ci.yml
completions/: install.fish  regular.fish
envfile/: envfile.go  envfile_godotenv_test.go  envfile_test.go  parser.go
rewrite/: basis.go  go.mod  go.sum  main.go
rewrite/shellquote/: quote.go
rewrite/starlarkutil/: util.go
script/: release.go
scripts/: tasks.py
shellquote/: quote.go  quote_test.go
src/regular/: __init__.py  __main__.py  basis.py  main.py  notify.py
starlarkutil/: util.go  util_test.go
systemd/: install.sh  regular.service
tests/: test_regular.py
tests/configs/basic/jobs/bar/: script
tests/configs/env/: env
tests/configs/env/jobs/greet/: script
tests/configs/env/os-var/: env  script
tests/configs/env/override/: env
tests/configs/error-notify/missing-script/: notify
tests/configs/failure/jobs/failure/: script
tests/configs/filename/foo/: run.sh
tests/configs/jitter/jitter/: script
tests/configs/no-script/bar/: filename
tests/configs/notify/always-notify/: script
tests/configs/notify/never-notify/: script
tests/configs/notify/notify-on-error/: notify
